RESOLVED FIXED55628
On Mac OS X, spelling suggestion panel stops showing up after change set 80121
https://bugs.webkit.org/show_bug.cgi?id=55628
Summary On Mac OS X, spelling suggestion panel stops showing up after change set 80121
Jia Pu
Reported 2011-03-02 16:32:11 PST
Before http://trac.webkit.org/changeset/80121, moving caret to the end of a misspelled word will bring up a suggestion panel. In changeset 80121, the additional call to setSelection() in SelectionController::textWillBeReplaced() broke this behavior. Previously, after a deletion command, when the call to changeSelectionAfterCommand() in Editor::appliedEditing() will trigger the correction panel timer. In change set 80121, the call to setSelection in SelectionController::textWillBeReplaced() triggers the timer. However the timer immediately gets cancelled at the beginning of Editor::appliedEditing(). Since we already changed the selection, the call to changeSelectionAfterCommand() will not change the selection again, hence the timer will not be started. The fix is to remove the call to stopCorrectionPanelTimer() in Editor::appliedEditing(). This code was added http://trac.webkit.org/changeset/71385, but was rendered unnecessary by subsequent changes. If fact, it now has undesired side effect.
Attachments
Proposed patch (v1) (509.85 KB, patch)
2011-03-02 16:40 PST, Jia Pu
no flags
Jia Pu
Comment 1 2011-03-02 16:40:40 PST
Created attachment 84485 [details] Proposed patch (v1)
Ryosuke Niwa
Comment 2 2011-03-02 19:33:19 PST
Thanks for detecting & fixing this regression! Great to see unnecessary code being removed .
WebKit Commit Bot
Comment 3 2011-03-03 03:14:13 PST
Comment on attachment 84485 [details] Proposed patch (v1) Clearing flags on attachment: 84485 Committed r80226: <http://trac.webkit.org/changeset/80226>
WebKit Commit Bot
Comment 4 2011-03-03 03:14:20 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.